Add script to redirect file protocol to template HTML

--- a/repo/index.html
+++ b/repo/index.html
@@ -7,6 +7,16 @@
     <meta name="description" content="Install Helium Browser on Linux via APT or DNF. Fast, secure, privacy-focused.">
     <meta name="theme-color" content="#ffffff">
     <meta name="color-scheme" content="light">
+    <script>
+        (function () {
+            try {
+                if (window.location && window.location.protocol === 'file:') {
+                    window.location.replace('../scripts/index.html.template');
+                }
+            } catch (e) {
+            }
+        })();
+    </script>
     <style>
         *, *::before, *::after { margin: 0; padding: 0; box-sizing: border-box; }
         
